--- a/acceuil.html
+++ b/acceuil.html
@@ -6,7 +6,7 @@
     <style>body {
     font-family: Arial, sans-serif;
     margin: 0;
-    background-color: #ffffff;
+    background-color: #6682af;
     color: #333333;
 }
 
@@ -104,8 +104,10 @@ p {
             <a href="inscription.html" class="btn">Commence</a>
         </div>
         <div class="image-section">
-            <div class="placeholder-image">Image</div>
-        </div>
+    <img src="Capture d’écran_25-6-2025_123541_.jpeg" alt="Page d'accueil" width="300">
+</div>
+
+
     </main>
 </body>
 </html>
